--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
-    "gatsby": "^2.0.0",
-    "gatsby-cli": "^2.4.3",
+    "gatsby": "^2.0.76",
+    "gatsby-cli": "^2.4.8",
     "gatsby-plugin-google-analytics": "^2.0.7",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
+    "gatsby-source-contentful": "^2.0.21",
     "node-sass": "^4.9.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-player": "^1.8.0"
   },
   "keywords": [
     "gatsby"
